--- a/index.html
+++ b/index.html
@@ -723,6 +723,9 @@ function getProperty&lt;T, K extends keyof T>(
 			</section>
 
 		</div>
+		<div style="position: absolute; bottom: 0">
+				<img  src="img/logo.svg" alt="" width="157.4px" height="49.1px" style="background: white"/>
+		</div>
 	</div>
 
 	<script src="js/reveal.js"></script>
