--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 				</div>
 			</section>
 			<section>
+				<h4>Typescript ≈ Javascript + Typy danych </h4>
+			</section>
+			<section>
 				<h2>Deklaracja zmiennej</h2>
 				<div class="fragment langed-snipped">
 					<span class="js">JS</span>
